@@ -120,6 +120,8 @@ Cacti CHANGELOG
 -issue#5561: Settings table custom size reverted by database repair
 -issue#5572: RRD Checker timeouts to low
 -issue#5573: Incorrect URL for editing graph template
+-issue#5581: Due to previously never completed upgrade, future upgrades fail due to missing color table keys
+-feature#5577: Provide new templates for ArubaOS switch, Aruba wifi controller and HPE iLO to be available during install
 
 1.2.25
 -security#GHSA-77rf-774j-6h3p: Protect against Insecure deserialization of filter data
